# thread_control_panel

./: .envrc  .gitignore  CLAUDE.md  README.md  hacs.json  thread_control_panel.code-workspace
.github/workflows/: release.yml  validate.yml
custom_components/thread_panel/: __init__.py  button.py  config_flow.py  const.py  entity.py  forwarder.py  manifest.json  manifest_loader.py  select.py  sensor.py  update.py
docs/: build_plan.md  build_plan_v1.md  build_plan_v2.md  device_dump.yaml
docs/build_plan_v2/: README.md  completed_steps.md  future_panels.md  notes.md  overview.md  phase1_security.md  phase2_groupA_multipanel.md  phase2_polish.md  phase3_themed.md  (+1 more)
panels/: README.md
platform/: README.md
platform/bridge/: README.md  pyproject.toml  test_client.py
platform/bridge/panel_bridge/: __init__.py  __main__.py  config.py  events.py  mqtt_creds.py  ota.py  state.py  uart_link.py  update_status.py  ws_server.py
platform/bridge/panel_bridge/cli/: panel_flash.py
platform/bridge/panel_bridge/controls/: __init__.py  nmcli_util.py  reboot.py  screen.py  update.py  wifi.py  wifi_manage.py  wifi_state.py
platform/firmware/components/panel_platform/: CMakeLists.txt  idf_component.yml  panel_lidar.c  panel_net.c  panel_ota_uart.c  panel_platform.c  panel_sensors.c  panel_uart.c
platform/firmware/components/panel_platform/include/: panel_app.h  panel_lidar.h  panel_net.h  panel_ota_uart.h  panel_platform.h  panel_platform_config.h  panel_sensors.h  panel_uart.h  panel_version.h
tools/: cut-release  cut-release.zsh  panel-ota  thread_panel_dump.py
(+69 files in other folders)
